snake-game/snake-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-service
  namespace: kube-system
  labels:
    app: snake-game
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
  selector:
    app.kubernetes.io/name: snake-game
